--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                             <a class="icofont-brand-whatsapp" href="https://wa.me/573028141668" target="blank"></a>
                         </div>
                         <div class="vanaal">
-                            <a href="https://www.vanaal.amigautier.us" target="blank">
+                            <a href="https://www.vanaal.us" target="blank">
                                 <h1>VANAAL</h1>
                             </a>
                         </div>
