--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <a class="icofont-brand-whatsapp" href="https://wa.me/573028141668" target="blank"></a>
                         </div>
                         <div class="vanaal">
-                            <a href="https://www.vanaal.amigautier.us" target="blank">
+                            <a href="https://www.vanaal.us" target="blank">
                                 <h1>VANAAL</h1>
                             </a>
                         </div>
@@ -299,7 +299,7 @@
                 <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotipo Ami Gautier"></div>
                 <a href="about" id="logotipofooter_about">About me</a>
                 <a href="contacto">Contact</a>
-                <a href="https://www.vanaal.amigautier.us" target="_blank">
+                <a href="https://www.vanaal.us" target="_blank">
                     <h2>VANAAL</h2>
                     <p>Magazine</p>
                 </a>
