--- a/architecture.html
+++ b/architecture.html
@@ -84,7 +84,7 @@
                             <a class="icofont-brand-whatsapp" href="https://wa.me/573028141668" target="blank"></a>
                         </div>
                         <div class="vanaal">
-                            <a href="https://vanaal-artdepartment.github.io" target="blank">
+                            <a href="https://www.vanaal.us" target="blank">
                                 <h1>VANAAL</h1>
                             </a>
                         </div>
@@ -268,7 +268,7 @@
                 </div>
                 <a href="about" id="logotipofooter_about">About me</a>
                 <a href="contacto">Contact</a>
-                <a href="https://www.vanaal.amigautier.us" target="_blank">
+                <a href="https://www.vanaal.us" target="_blank">
                     <h2>VANAAL</h2>
                     <p>Magazine</p>
                 </a>
