--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ami Gautier: Visual art</title>
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Ami Gautier",
+        "url": "https://amigautier.us/",
+        "alternateName": "Ami Gautier: Visual art"
+        }
+    </script>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
     <meta name="author" content="info@amigautier.us" />
     <!--favicon buscador-->
     <link rel="icon" type=”image/png” href="images/logotipo/favicon.png" />
     <!--Description-->
     <meta name="description"
-        content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer in each photograph." />
+        content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
     <!--Keywords-->
     <meta name="keywords"
         content="Ami Gautier, Vanaal, Vanaal art department, Vanaal Magazine, Fotógrafo, Fotógrafo Bogotá, Fotografía Colombia, Fotografía Editorial Bogotá, Fotografía editorial Colombia, Fotografíade producto Bogotá, Fotografía de producto Colombia" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ami Gautier</title>
 
     <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
@@ -37,6 +47,8 @@
 </head>
 
 <body>
+
+    <h1 style="display: none;">Ami Gautier: Visual art</h1>
 
     <!--Header-->
     <header>
