--- a/atmospheric.html
+++ b/atmospheric.html
@@ -106,15 +106,15 @@
 
                 <div class="cont_carrusel_scroll">
                     <h2>Gallery</h2>
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/1.jpg"
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/1.JPG"
                         alt="Fotografía en blanco y negro monja al frente de una ventana con una vela en la mano, rodeada de mariposas.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/2.jpg"
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/2.JPG"
                         alt="Fotografía en blanco y negro monja al frente de una ventana sosteniendo un buho en la mano.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/3.jpg"
                         alt="Fotografía en blanco y negro monja al frente de una ventana orando.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/4.jpg"
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/4.JPG"
                         alt="Fotografía en blanco y negro retrato de hombre con los ojos cerrados.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/5.jpg"
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/5.JPG"
                         alt="Fotografía en blanco y negro hombre con el rostro tapado por una manta.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/6.JPG"
                         alt="Fotografía en blanco y negro hombre con túnica en el rostro.">
