--- a/atmospheric.html
+++ b/atmospheric.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ami Gautier: Atmospheric photography</title>
+     <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
     <meta name="author" content="info@amigautier.us" />
     <!--favicon buscador-->
@@ -12,10 +16,6 @@
     <meta name="description" content="Artistic photography by photographer Ami Gautier." />
     <!--Keywords-->
     <meta name="keywords" content="Artistic photography, Black and white photography, Atmospheric photography" />
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atmospheric</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
