--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ami Gautier: Contact</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
     <meta name="author" content="info@amigautier.us" />
     <!--favicon buscador-->
@@ -12,9 +16,6 @@
     <meta name="description" content="Contact photographer Ami Gautier. Email: vanaa.@amigautier.us" />
     <!--Keywords-->
     <meta name="keywords" content="Contact photographer Ami Gautier" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
