--- a/editorial.html
+++ b/editorial.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ami Gautier: Editorial Photography</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
     <meta name="author" content="info@amigautier.us" />
     <!--favicon buscador-->
@@ -14,9 +18,6 @@
     <meta name="keywords"
         content="Editorial photography, Editorial photography Vanaal, Editorial photography Bogota, Editorial photography Colombia, Editorial photography Ami Gautier, Fotografía editorial, Fotografía editorial Vanaal, Fotografía editorial Bogotá, Fotografía editorial Colombia, Fotografía editorial Ami Gautier" />
     <!--Hoja de estilos-->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editorial Photography</title>
 
     <link rel="stylesheet" href="css/estilos.css" />
     <!--Link js para abrir menú-->
