--- a/product.html
+++ b/product.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ami Gautier: Product photography</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
     <meta name="author" content="info@amigautier.us" />
     <!--favicon buscador-->
@@ -13,9 +17,6 @@
     <!--Keywords-->
     <meta name="keywords"
         content="Product photography, Product photography Vanaal, Product photography Bogota, Product photography Colombia, Product photography Ami Gautier, Fotografía producto, Fotografía producto Vanaal, Fotografía producto Bogotá, Fotografía producto Colombia, Fotografía producto Ami Gautier" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografía producto</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/product.css" />
