--- a/about.html
+++ b/about.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ami Gautier: About</title>
-    <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
-    <meta name="author" content="info@amigautier.us" />
+    <meta name="author" content="contact@amigautier.us" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
     <meta name="description" content="Ami Gautier architecture photography." />
     <!--Keywords-->
     <meta name="keywords" content="Fotografía de arquitectura Bogotá, Photography architecture Bogotá" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
@@ -58,10 +57,8 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <a class="icofont-email" id="ico-gmail" href="mailto:info@amigautier.us" target="blank"></a>
-                <a class="icofont-ui-call" href="https://wa.me/573028141668" target="blank">
-                    <p>+57 302 814 1668</p>
-                </a>
+                <p class="txtemail">Email</p>
+                <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
             </div>
 
             <ul class="menu" id="mostrarmenu">
@@ -71,7 +68,7 @@
                 <a class="submenuitem" id="submenuitem" href="atmospheric">Atmospheric</a>
                 <a class="submenuitem" id="submenuitem" href="editorial">Editorial</a>
                 <a class="submenuitem" id="submenuitem" href="product">Product</a>
-                <a class="submenuitem" id="submenuitem" href="architecture">Architecture</a>
+                <!--      <a class="submenuitem" href="architecture">Architecture</a>-->
                 <a class="submenuitem" id="submenuitem" href="about">About</a>
                 <a class="submenuitem" id="submenuitem" href="contact">Contact</a>
 
@@ -82,10 +79,9 @@
                         <div class="redes_sociales">
                             <a class="icofont-behance" href="https://www.behance.net/amigautier" target="blank"></a>
                             <a class="icofont-instagram" href="http://www.instagram.com/amigautier" target="blank"></a>
-                            <a class="icofont-brand-whatsapp" href="https://wa.me/573028141668" target="blank"></a>
                         </div>
                         <div class="vanaal">
-                            <a href="https://www.vanaal.us" target="blank">
+                            <a href="https://www.thevanaal.com" target="blank">
                                 <h1>VANAAL</h1>
                             </a>
                         </div>
@@ -138,8 +134,8 @@
                         </p>
 
                         <p class="icofont-email" id="1" style="font-size: 21px;">
-                            <a href="mailto:info@amigautier.us" target="blank" id="1"
-                                style="font-size: 16px;">info@amigautier.us</a>
+                            <a href="mailto:contact@amigautier.us" target="blank" id="1"
+                                style="font-size: 16px;">contact@amigautier.us</a>
                         </p>
 
                     </div>
