--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
-    <meta name="author" content="info@amigautier.us" />
+    <meta name="author" content="contact@amigautier.us" />
     <!--favicon buscador-->
     <link rel="icon" type=”image/png” href="images/logotipo/favicon.png" />
     <!--Description-->
@@ -26,7 +26,7 @@
         content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
     <!--Keywords-->
     <meta name="keywords"
-        content="Ami Gautier, Vanaal, Vanaal art department, Vanaal Magazine, Fotógrafo, Fotógrafo Bogotá, Fotografía Colombia, Fotografía Editorial Bogotá, Fotografía editorial Colombia, Fotografíade producto Bogotá, Fotografía de producto Colombia" />
+        content="Ami Gautier, The Vanaal, Vanaal art department, Vanaal Magazine, Fotógrafo, Fotógrafo Bogotá, Fotografía Colombia, Fotografía Editorial Bogotá, Fotografía editorial Colombia, Fotografíade producto Bogotá, Fotografía de producto Colombia" />
 
     <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
@@ -36,6 +36,14 @@
     <link rel="stylesheet" href="font/icofont.min.css">
     <!--Script efecto scroll-->
     <script src="js/scrollreveal.js"></script>
+
+    <!--Actualizar año-->
+    <script>
+        var fechaActual = new Date();
+        var añoActual = fechaActual.getFullYear();
+        var actualizarfecha = añoActual;
+    </script>
+
     <!--Bloquear clic derecho-->
     <script type="text/javascript">
         document.oncontextmenu = function () {
@@ -70,10 +78,8 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <a class="icofont-email" id="ico-gmail" href="mailto:info@amigautier.us" target="blank"></a>
-                <a class="icofont-ui-call" href="https://wa.me/573028141668" target="blank">
-                    <p>+57 302 814 1668</p>
-                </a>
+                <p>Email</p>
+                <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
             </div>
 
             <ul class="menu" id="mostrarmenu">
@@ -83,7 +89,7 @@
                 <a class="submenuitem" href="atmospheric">Atmospheric</a>
                 <a class="submenuitem" href="editorial">Editorial</a>
                 <a class="submenuitem" href="product">Product</a>
-                <a class="submenuitem" href="architecture">Architecture</a>
+                <!--       <a class="submenuitem" href="architecture">Architecture</a>-->
                 <a class="submenuitem" href="about">About</a>
                 <a class="submenuitem" href="contact">Contact</a>
 
@@ -93,11 +99,12 @@
                     <div class="contenedor2_redes_sociales">
                         <div class="redes_sociales">
                             <a class="icofont-behance" href="https://www.behance.net/amigautier" target="blank"></a>
+
                             <a class="icofont-instagram" href="http://www.instagram.com/amigautier" target="blank"></a>
-                            <a class="icofont-brand-whatsapp" href="https://wa.me/573028141668" target="blank"></a>
+
                         </div>
                         <div class="vanaal">
-                            <a href="https://www.vanaal.us" target="blank">
+                            <a href="https://www.thevanaal.com" target="blank">
                                 <h1>VANAAL</h1>
                             </a>
                         </div>
@@ -212,7 +219,7 @@
                     <li></li>
                 </ul>
 
-            </section>            
+            </section>
 
             <!--Imagen fija que sale por abajo-->
             <div class="contenedor_imagenfija_2"></div>
@@ -288,16 +295,13 @@
                 <h3>FIND ME</h3>
 
                 <p class="icofont-email" id="gmail">
-                    <a href="mailto:info@amigautier.us" target="blank">
+                    <a href="mailto:contact@amigautier.us" target="blank">
                         Email</a>
                 </p>
 
                 <p class="icofont-behance" id="1">
                     <a href="http://www.behance.com/amigautier" target="blank" id="instagram">
                         Behance</a>
-                </p>
-                <p class="icofont-brand-whatsapp" id="WhatsApp">
-                    <a href="https://wa.me/573028141668" target="blank">WhatsApp</a>
                 </p>
             </div>
 
@@ -311,7 +315,7 @@
                 <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotipo Ami Gautier"></div>
                 <a href="about" id="logotipofooter_about">About me</a>
                 <a href="contacto">Contact</a>
-                <a href="https://www.vanaal.us" target="_blank">
+                <a href="https://www.thevanaal.com" target="_blank">
                     <h2>VANAAL</h2>
                     <p>Magazine</p>
                 </a>
@@ -320,7 +324,9 @@
         </div>
 
         <div class="copyright">
-            <p>© Copyright 2024 Ami Gautier. All Rights Reserved.</p>
+            <p>© Copyright
+                <script>document.write(actualizarfecha)</script> Ami Gautier. All Rights Reserved.
+            </p>
         </div>
     </footer>
 
