--- a/atmospheric.html
+++ b/atmospheric.html
@@ -67,18 +67,23 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <p>Email</p>
+                <a class="email_txt" id="email_txt" href="mailto:contact@amigautier.us" target="blank">Email</a>
+                <div class="textohover_email">
+                    <p>Contact me</p>
+                </div>
                 <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
+                <div class="textohover_email">
+                    <p>Contact me</p>
+                </div>
             </div>
 
             <ul class="menu" id="mostrarmenu">
                 <p class="submenuitem" id="espaciovacio"
                     style="border-bottom: 1px solid rgb(224, 224, 224); margin-bottom: 36px;"></p>
 
-                <a class="submenuitem" id="submenuitem" href="atmospheric">Atmospheric</a>
+                <a class="submenuitem" id="submenuitem" href="#">Atmospheric</a>
                 <a class="submenuitem" id="submenuitem" href="editorial">Editorial</a>
                 <a class="submenuitem" id="submenuitem" href="product">Product</a>
-                <!--       <a class="submenuitem" href="architecture">Architecture</a>-->
                 <a class="submenuitem" id="submenuitem" href="about">About</a>
                 <a class="submenuitem" id="submenuitem" href="contact">Contact</a>
 
@@ -88,7 +93,13 @@
                     <div class="contenedor2_redes_sociales">
                         <div class="redes_sociales">
                             <a class="icofont-behance" href="https://www.behance.net/amigautier" target="blank"></a>
+                            <div class="textohover_behance">
+                                <p>Follow Me on Behance</p>
+                            </div>
                             <a class="icofont-instagram" href="http://www.instagram.com/amigautier" target="blank"></a>
+                            <div class="textohover_instagram">
+                                <p>Follow Me on Instagram</p>
+                            </div>
                         </div>
                         <div class="vanaal">
                             <a href="https://www.thevanaal.com" target="blank">
