--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,10 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <p>Email</p>
+                <a class="email_txt" id="email_txt" href="mailto:contact@amigautier.us" target="blank">Email</a>
+                <div class="textohover_email"><p>Contact me</p></div>
                 <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
+                <div class="textohover_email"><p>Contact me</p></div>
             </div>
 
             <ul class="menu" id="mostrarmenu">
@@ -75,9 +77,8 @@
                 <a class="submenuitem" id="submenuitem" href="atmospheric">Atmospheric</a>
                 <a class="submenuitem" id="submenuitem" href="editorial">Editorial</a>
                 <a class="submenuitem" id="submenuitem" href="product">Product</a>
-           <!--      <a class="submenuitem" href="architecture">Architecture</a>-->
                 <a class="submenuitem" id="submenuitem" href="about">About</a>
-                <a class="submenuitem" id="submenuitem" href="contact">Contact</a>
+                <a class="submenuitem" id="submenuitem" href="#">Contact</a>
 
                 <p class="submenuitem" id="espaciovacio"></p>
 
@@ -85,7 +86,9 @@
                     <div class="contenedor2_redes_sociales">
                         <div class="redes_sociales">
                             <a class="icofont-behance" href="https://www.behance.net/amigautier" target="blank"></a>
+                            <div class="textohover_behance"><p>Follow Me on Behance</p></div>
                             <a class="icofont-instagram" href="http://www.instagram.com/amigautier" target="blank"></a>
+                            <div class="textohover_instagram"><p>Follow Me on Instagram</p></div>
                         </div>
                         <div class="vanaal">
                             <a href="https://www.thevanaal.com" target="blank">
