--- a/product.html
+++ b/product.html
@@ -293,10 +293,9 @@
                 <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotipo Ami Gautier"></div>
                 <a href="about" id="logotipofooter_about">About me</a>
                 <a href="contacto">Contact</a>
-                <a href="https://www.thevanaal.com" target="_blank">
-                    <h2>VANAAL</h2>
-                    <p>Magazine</p>
-                </a>
+                <a href="atmospheric">Atmospheric</a>
+                <a href="editorial">Editorial</a>
+                <a href="product">Product</a>
             </div>
 
         </div>
