--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="logotipofooter">
                 <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotipo Ami Gautier"></div>
                 <a href="about" id="logotipofooter_about">About me</a>
-                <a href="contacto">Contact</a>
+                <a href="contact">Contact</a>
                 <a href="atmospheric">Atmospheric</a>
                 <a href="editorial">Editorial</a>
                 <a href="product">Product</a>
