--- a/atmospheric.html
+++ b/atmospheric.html
@@ -123,37 +123,37 @@
                 <div class="cont_carrusel_scroll">
                     <h2>Gallery</h2>
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/1.JPG"
-                        alt="Fotografía en blanco y negro monja al frente de una ventana con una vela en la mano, rodeada de mariposas.">
+                        alt="Black and white photograph of a nun in front of a giant window, holding a candle, surrounded by butterflies.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/2.JPG"
-                        alt="Fotografía en blanco y negro monja al frente de una ventana sosteniendo un buho en la mano.">
+                        alt="Black and white photograph nun in front of a giant window, holding an owl in her hand.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/3.jpg"
-                        alt="Fotografía en blanco y negro monja al frente de una ventana orando.">
+                        alt="Black and white photograph nun in front of a giant window praying.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/4.JPG"
-                        alt="Fotografía en blanco y negro retrato de hombre con los ojos cerrados.">
+                        alt="Black and white portrait photograph of a man wearing a tunic on his head, with his eyes closed and a chain in his hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/5.JPG"
-                        alt="Fotografía en blanco y negro hombre con el rostro tapado por una manta.">
+                        alt="Black and white photograph of a man with his face completely covered by a blanket.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/6.JPG"
-                        alt="Fotografía en blanco y negro hombre con túnica en el rostro.">
+                        alt="Black and white photograph of man with tunic on his face and a chain in his hand.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/7.jpg"
-                        alt="Fotografía en blanco y negro hombre tapado por una túnica, sentado en una silla, rodeado de mariposas.">
+                        alt="Black and white photograph of an entity covered by a robe, seated on a chair, in front of which hands hold an open book from which butterflies are emerging.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/8.jpg"
-                        alt="Fotografía en blanco y negro monja tapandose el rostro con las manos.">
+                        alt="Black and white photograph of a nun covering her face with her hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/9.JPG"
-                        alt="Fotografía en blanco y negro monja gritando.">
+                        alt="Black and white photograph nun screaming in despair.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/10.jpg"
-                        alt="Fotografía en blanco y negro monja tapandose el rostro con una mano y una biblia abierta en la otra mano.">
+                        alt="Black and white photograph of a nun covering her face with one hand and an open bible in the other hand.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/11.jpg"
-                        alt="Fotografía en blanco y negro hombre saliendo de unas telas que están en el aire.">
+                        alt="Black and white photograph of a man coming out of some canvases that are in the air.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/12.jpg"
-                        alt="Fotografía en blanco y negro hombre mirando a la cámara detrás de unas telas que están en el aire.">
+                        alt="Black and white photograph of a man looking at the camera behind some fabrics that are in the air.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/13.JPG"
-                        alt="Fotografía en blanco y negro hombre rezando con una túnica en el rostro.">
+                        alt="Black and white photograph of a man praying with a robe on his face and a chain in his hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/14.JPG"
-                        alt="Fotografía en blanco y negro hombre rezando con sus manos en el rostro.">
+                        alt="Black and white photograph of a man with a tunic on his head, praying with his hands on his face.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/15.JPG"
-                        alt="Fotografía en blanco y negro hombre rezando mirando hacia arriba.">
+                        alt="Black and white photograph of praying man wearing a tunic, looking towards the sky.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/16.jpg"
-                        alt="Fotografía en blanco y negro hombre detrás de telas que están en el aire.">
+                        alt="Black and white photograph of man behind canvases that are in the air.">
                 </div>
 
             </div>
@@ -199,7 +199,7 @@
             <div class="feedinstagram">
                 <h2>Instagram</h2>
                 <a href="http://www.instagram.com/amigautier" target="blank"><img src="images/footer/feed.jpg"
-                        alt="Feed de Instagram" /></a>
+                        alt="Feed of Instagram" /></a>
             </div>
 
             <div class="logotipofooter">
