--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ami Gautier: Visual art</title>
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Ami Gautier",
-        "url": "https://amigautier.us/",
-        "alternateName": "Ami Gautier: Visual art"
-        }
-    </script>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.us" />
     <!--Author-->
@@ -56,7 +47,7 @@
 
 <body>
 
-    <h1 style="display: none;">Ami Gautier: Visual art</h1>
+    <h1 class="tituloami">Ami Gautier</h1>
 
     <!--Header-->
     <header>
@@ -73,15 +64,19 @@
             <div class="centrarlogotipo">
                 <a class="" href="index">
                     <img class="logotipo" id="centrarlogotipo" src="images/logotipo/logotipo.png"
-                        alt="Logotipo Ami Gautier" />
+                        alt="Logotype Ami Gautier" />
                 </a>
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
                 <a class="email_txt" id="email_txt" href="mailto:contact@amigautier.us" target="blank">Email</a>
-                <div class="textohover_email"><p>Contact me</p></div>
+                <div class="textohover_email">
+                    <p>Contact me</p>
+                </div>
                 <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
-                <div class="textohover_email"><p>Contact me</p></div>
+                <div class="textohover_email">
+                    <p>Contact me</p>
+                </div>
             </div>
 
             <ul class="menu" id="mostrarmenu">
@@ -100,9 +95,13 @@
                     <div class="contenedor2_redes_sociales">
                         <div class="redes_sociales">
                             <a class="icofont-behance" href="https://www.behance.net/amigautier" target="blank"></a>
-                            <div class="textohover_behance"><p>Follow Me on Behance</p></div>
+                            <div class="textohover_behance">
+                                <p>Follow Me on Behance</p>
+                            </div>
                             <a class="icofont-instagram" href="http://www.instagram.com/amigautier" target="blank"></a>
-                            <div class="textohover_instagram"><p>Follow Me on Instagram</p></div>
+                            <div class="textohover_instagram">
+                                <p>Follow Me on Instagram</p>
+                            </div>
                         </div>
                         <div class="vanaal">
                             <a href="https://www.thevanaal.com" target="blank">
@@ -170,60 +169,13 @@
 
                 <div class="grid_cont_imgfija_1">
                     <img id="img_fija_2" src="images/inicio/banner_3.jpg"
-                        alt="Fotografía artistica hombre flotando en el agua de un lago">
+                        alt="Artistic photograph of a man in a forest, sitting on a giant stone covering his face against his knees.">
 
                     <img id="img_fija_3" src="images/inicio/banner_4.jpg"
-                        alt="Fotografía artistica, mujer con vestido blanco abrazando sus piernas, subida en una roca.">
+                        alt="Artistic photograph in a forest, with a long-haired woman dressed in a long white dress, sitting on a giant rock, covering her face which is against her knees. On the other side there is a waterfall.">
                 </div>
 
-                <section class="contenedor_txt_imagenfija_1">
-                    <div class="txt_imagenfija_1" id="txt_imagenfija_1">
-                        <h2 style="font-weight: bolder">INTROS PECTION</h2>
-                        <p>Look within yourself to find the art. Allow yourself to discover the vast canvas within you.
-                        </p>
-                    </div>
-                </section>
             </div>
-
-            <!--Slider de 4 fotos-->
-            <section class="contenedor_slider_index">
-                <div class="slider_index" id="slider_index">
-                    <div class="slider_section_index" id="slider_section_index1">
-                        <img src="images/inicio/slider/slider_1.jpg"
-                            alt="Fotografía artística, hombre acostado en una roca en medio de un frondoso bosque." />
-                    </div>
-                    <div class="slider_section_index" id="slider_section">
-                        <img src="images/inicio/slider/slider_2.jpg"
-                            alt="Fotografía artística, hombre tapando su rostro en medio de un rio con muchas rocas." />
-                    </div>
-                    <div class="slider_section_index">
-                        <img src="images/inicio/slider/slider_3.jpg"
-                            alt="Fotografía atística, hombre en medio de un bosque de bambú, tapando su rostro." /></a>
-                    </div>
-                    <div class="slider_section_index">
-                        <img src="images/inicio/slider/slider_4.jpg"
-                            alt="Fotografía atística, hombre en medio de un lago." /></a>
-                    </div>
-                </div>
-                <!--button prev and next-->
-                <div class="slider_btn_prev_index" id="slider_btn_prev_index">
-                    &#60;
-                </div>
-                <div class="slider_btn_next_index" id="slider_btn_next_index">
-                    &#62;
-                </div>
-                <!-- dots (if 5 items => 5 dots)-->
-                <ul class="dots">
-                    <li class="active"></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-
-            </section>
-
-            <!--Imagen fija que sale por abajo-->
-            <div class="contenedor_imagenfija_2"></div>
 
             <!--Banner 3 inicio-->
             <div class="bannerfijo3">
@@ -272,13 +224,67 @@
                 </div>
 
                 <div class="grid_cont_imgfija_3">
-                    <img id="img_fija_2" src="images/inicio/banner_8.jpg"
-                        alt="Fotografía artistica hombre flotando en el agua de un lago">
+                    <img id="img_fija_4" src="images/inicio/banner_7.jpg"
+                        alt="Artistic photography, naked man covering his face with his hands in the middle of a bamboo forest.">
+                    <img id="img_fija_2" src="images/inicio/banner_8.JPG"
+                        alt="Artistic photograph of a man floating in the water of a lake.">
+                </div>
 
-                    <img id="img_fija_4" src="images/inicio/banner_9.jpg"
-                        alt="Fotografía artistica, hombre desnudo tapando su rostro con las manos, en un rio con rocas gigantes.">
+            </div>
+
+
+            <!--Banner 5 inicio-->
+            <div class="bannerfijo4">
+
+                <div class="degradadobanner">
+
+                    <div class="txtbanner3">
+                        <div class="conttxtbanner3">
+                            <h2>INTROS PECTION</h2>
+                            <p>
+                                Look within yourself to find the art. Allow yourself to discover the vast canvas within you.
+                            </p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="txtbanner4">
+                        <div class="conttxtbanner4">
+                            <h2>ART AS THERAPY</h2>
+                            <p>
+                                I found a refuge where the whispers of pain dissolve in the harmony of creation. Amidst beautiful forests and with each shot of the camera, the pain is set free, and one enters a world where judgments do not exist, only the liberation of being.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <!--Banner 6 con grid de 2 imágenes inicio-->
+            <div class="contenedor_imagenfija_4">
+
+                <div class="degradado_imagenfija_3"></div>
+
+                <div class="cont_txt_imgfija3">
+                    <div class="txt_imgfija_3" id="txt_imgfija_3">
+                        <h2>IT'S YOUR TURN</h2>
+                        <p>Let your heart and your ancestors guide you. Let go of all the pain, the tears, the fears and the judgments. Reconnect with the spirits of the forest and let your imagination soar. It's time to embark on a journey. It's time to create art.</p>
+                    </div>
+                </div>
+
+                <div class="grid_cont_imgfija_3">
+                    <img id="img_fija_2" src="images/inicio/banner_11.jpg"
+                        alt="Artistic photography man floating in the water of a lake.">
+
+                    <img id="img_fija_4" src="images/inicio/banner_12.jpg"
+                        alt="Artistic photography man floating in the water of a lake.">
                 </div>
             </div>
+
 
             <!--Imagen fija 2 que sale por abajo-->
             <div class="contenedor_imagenfija_5"></div>
@@ -309,11 +315,11 @@
             <div class="feedinstagram">
                 <h2>Instagram</h2>
                 <a href="http://www.instagram.com/amigautier" target="blank"><img src="images/footer/feed.jpg"
-                        alt="Feed de Instagram" /></a>
+                        alt="Feed of Instagram" /></a>
             </div>
 
             <div class="logotipofooter">
-                <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotipo Ami Gautier"></div>
+                <div class="imageAG"><img src="images/logotipo/favicon.png" alt="isotype Ami Gautier"></div>
                 <a href="about" id="logotipofooter_about">About me</a>
                 <a href="contact">Contact</a>
                 <a href="atmospheric">Atmospheric</a>
