--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="grid_cont_imgfija_3">
                     <img id="img_fija_4" src="images/inicio/banner_7.jpg"
                         alt="Artistic photography, naked man covering his face with his hands in the middle of a bamboo forest.">
-                    <img id="img_fija_2" src="images/inicio/banner_8.JPG"
+                    <img id="img_fija_2" src="images/inicio/banner_8.jpg"
                         alt="Artistic photograph of a man floating in the water of a lake.">
                 </div>
 
