--- a/atmospheric.html
+++ b/atmospheric.html
@@ -122,20 +122,18 @@
 
                 <div class="cont_carrusel_scroll">
                     <h2>Gallery</h2>
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/17.jpg"
+                        alt="Black and white photograph of man with butterflies on hands and head.">
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/7.jpg"
+                        alt="Black and white photograph of an entity covered by a robe, seated on a chair, in front of which hands hold an open book from which butterflies are emerging.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/1.JPG"
                         alt="Black and white photograph of a nun in front of a giant window, holding a candle, surrounded by butterflies.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/2.JPG"
-                        alt="Black and white photograph nun in front of a giant window, holding an owl in her hand.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/3.jpg"
-                        alt="Black and white photograph nun in front of a giant window praying.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/4.JPG"
                         alt="Black and white portrait photograph of a man wearing a tunic on his head, with his eyes closed and a chain in his hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/5.JPG"
                         alt="Black and white photograph of a man with his face completely covered by a blanket.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/6.JPG"
                         alt="Black and white photograph of man with tunic on his face and a chain in his hand.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/7.jpg"
-                        alt="Black and white photograph of an entity covered by a robe, seated on a chair, in front of which hands hold an open book from which butterflies are emerging.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/8.jpg"
                         alt="Black and white photograph of a nun covering her face with her hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/9.JPG"
@@ -144,16 +142,21 @@
                         alt="Black and white photograph of a nun covering her face with one hand and an open bible in the other hand.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/11.jpg"
                         alt="Black and white photograph of a man coming out of some canvases that are in the air.">
-                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/12.jpg"
-                        alt="Black and white photograph of a man looking at the camera behind some fabrics that are in the air.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/13.JPG"
                         alt="Black and white photograph of a man praying with a robe on his face and a chain in his hands.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/14.JPG"
                         alt="Black and white photograph of a man with a tunic on his head, praying with his hands on his face.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/15.JPG"
                         alt="Black and white photograph of praying man wearing a tunic, looking towards the sky.">
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/2.JPG"
+                        alt="Black and white photograph nun in front of a giant window, holding an owl in her hand.">
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/3.jpg"
+                        alt="Black and white photograph nun in front of a giant window praying.">
                     <img class="carrusel_img" id="sbutton1" src="images/atmospheric/16.jpg"
                         alt="Black and white photograph of man behind canvases that are in the air.">
+                    <img class="carrusel_img" id="sbutton1" src="images/atmospheric/12.jpg"
+                        alt="Black and white photograph of a man looking at the camera behind some fabrics that are in the air.">
+
                 </div>
 
             </div>
