--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Author-->
-    <meta name="author" content="contact@amigautier.us" />
+    <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
@@ -57,9 +57,9 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <a class="email_txt" id="email_txt" href="mailto:contact@amigautier.us" target="blank">Email</a>
+                <a class="email_txt" id="email_txt" href="mailto:info.amigautier@gmail.com" target="blank">Email</a>
                 <div class="textohover_email"><p>Contact me</p></div>
-                <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
+                <a class="icofont-email" id="ico-gmail" href="mailto:info.amigautier@gmail.com" target="blank"></a>
                 <div class="textohover_email"><p>Contact me</p></div>
             </div>
 
@@ -137,8 +137,8 @@
                         </p>
 
                         <p class="icofont-email" id="1" style="font-size: 21px;">
-                            <a href="mailto:contact@amigautier.us" target="blank" id="1"
-                                style="font-size: 16px;">contact@amigautier.us</a>
+                            <a href="mailto:info.amigautier@gmail.com" target="blank" id="1"
+                                style="font-size: 16px;">info.amigautier@gmail.com</a>
                         </p>
 
                     </div>
